# agent-workflow-kernel

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: CANONICAL_WORKFLOW_CONTROL_ARCHITECTURE.md  CANONICAL_WORKFLOW_CONTROL_FINDINGS.md  CANONICAL_WORKFLOW_CONTROL_RELEASE_MANIFEST.md  DEPENDENCY_POLICY.md  architecture.md  control.md  decisions.md  lane-adoption-checklist.md  public-api.md  rearchitecture-plan.md
docs/lessons/: import-preserving-god-module-split.md  kernel-purity-import-lint.md  prove-authority-at-public-and-installed-boundaries.md
docs/rearchitecture/: 00-baseline.md  01-current-architecture.md  02-orthogonal-reviews.md  03-target-architecture.md  04-implementation-plan.md  05-implementation-log.md  06-validation-report.md  07-final-handoff.md  public-api.md
docs/synthesis/: a2a-stage.md  adapter-interfaces.md  automated-suman-reviewer.md  codex-cli-runtime-adapter.md  (+12 more)
fixtures/: README.md  example_workflow_validation_report.json
prompts/: README.md  registry.yaml
scripts/: check.sh  codex_cli_runtime_smoke.py  codex_runtime_lane_comparison.py  codex_sdk_runtime_smoke.py  dev_setup.sh  openclaw_auto_review_packet.py  openclaw_blackboard_bus_runner.py  openclaw_ivy_jonah_owned_runner.py  openclaw_live_cutover.py  openclaw_owned_completion_bridge.py  openclaw_shadow_run.py  openclaw_two_lane_onboarding.py  render_openclaw_prompt_profile.py
tests/: test_actor_sessions.py  test_adapter_spi_local.py  test_cli_local_execution.py  test_codex_cli_runtime_adapter.py  test_codex_runtime_lane_comparison.py  test_codex_sdk_runtime_adapter.py  test_contracts.py  test_core_schema_dsl.py  test_developer_setup.py  test_example_workflows.py  test_ivy_jonah_native_adapters.py  test_kernel_import_lint.py  test_kernel_public_api.py  test_live_operator_surface_adapters.py  test_openclaw_auto_review_packet.py  test_openclaw_blackboard_adapter.py  test_openclaw_blackboard_bus_runner.py  test_openclaw_decision_loop_adapter.py  test_openclaw_ivy_jonah_owned_runner.py  test_openclaw_ivy_lane_adoption.py  test_openclaw_live_cutover.py  test_openclaw_owned_completion_bridge.py  test_openclaw_prompt_inventory.py  test_openclaw_prompt_profile_renderer.py  test_openclaw_readonly_adapter.py  test_openclaw_runtime_agent_adapter.py  test_openclaw_shadow_runner.py  test_openclaw_two_lane_onboarding.py  test_openclaw_weekly_update_adoption.py  test_packaging_discovery.py  test_parity_reporting.py  test_policy_engine.py  test_prompt_context_receipts.py  test_sandbox_surface_connectors.py  test_sqlite_ledger_runner.py  test_surface_profiles.py  test_workflow_kernel_run_once.py  test_workflow_runner_owned_execution.py  test_x_digest_tracer_bullet.py
tools/: README.md  import_lint.py  verify_wheel.py
workflows/: README.md  bumblebee_quality_review.yaml  deterministic_system_action.yaml  ivy_jonah_editorial.yaml  jarvis_weekly_update_shadow.yaml  openclaw_blackboard_bus.yaml  openclaw_supercharge_idea_lifecycle.yaml  radhe_review_pipeline.yaml  safe_token_optimizer_review.yaml  trading_research_gate.yaml  x_digest_post_review.yaml
(+104 files in other folders)
