[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workflow-kernel"
version = "0.1.0"
description = "Portable workflow kernel for agent, human, script, and adapter-driven work."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = [
  "packages/kernel",
  "packages/adapters/openclaw",
  "packages/adapters/codex_cli",
]
include = [
  "agent_workflow_kernel",
  "agent_workflow_kernel.*",
  "agent_workflow_kernel_openclaw",
  "agent_workflow_kernel_openclaw.*",
  "agent_workflow_kernel_codex_cli",
  "agent_workflow_kernel_codex_cli.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
