[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workflow-kernel"
version = "0.2.0"
description = "Portable workflow kernel for agent, human, script, and adapter-driven work."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
codex-sdk = [
  "openai-codex>=0.1.0b2",
]

[tool.setuptools.packages.find]
where = [
  "packages/kernel",
  "packages/adapters/openclaw",
  "packages/adapters/a2a",
  "packages/adapters/codex_cli",
  "packages/adapters/codex_sdk",
  "packages/adapters/artifact_validation",
  "packages/adapters/ivy",
]
include = [
  "agent_workflow_kernel",
  "agent_workflow_kernel.*",
  "agent_workflow_kernel_openclaw",
  "agent_workflow_kernel_openclaw.*",
  "agent_workflow_kernel_a2a",
  "agent_workflow_kernel_a2a.*",
  "agent_workflow_kernel_artifact_validation",
  "agent_workflow_kernel_artifact_validation.*",
  "agent_workflow_kernel_codex_cli",
  "agent_workflow_kernel_codex_cli.*",
  "agent_workflow_kernel_codex_sdk",
  "agent_workflow_kernel_codex_sdk.*",
  "agent_workflow_kernel_ivy",
  "agent_workflow_kernel_ivy.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
